# VulkanCompute

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vc140.idb  vcpkg.json
Playground/: decomps.asv  decomps.m  gmw81.py  model_values.py  show_params.py  test_matrices.asv  test_matrices.m  test_solvers.py  timing.py  transpose_mul.py
VulkanCompute/: CMakeLists.txt  VulkanCompute.cpp  VulkanCompute.h  expression.ixx  glsl.cpp  glsl.ixx  symbolic.ixx  util.ixx  vc.ixx
VulkanCompute/expression/: expr.cpp  expr.ixx  nodes.cpp  nodes.ixx  nodex.ixx
VulkanCompute/expression/algebra/: token_algebra.ixx
VulkanCompute/expression/algebra/binary/: add.ixx  div.ixx  mul.ixx  pow.ixx  sub.ixx
VulkanCompute/expression/algebra/unary/: neg.ixx  trig.ixx  unary.ixx
VulkanCompute/expression/parser/: defaultexp.ixx  lexer.ixx  shunter.ixx  token.ixx
VulkanCompute/glsl/: func_factory.ixx  function.ixx  glsl.cpp  glsl.ixx  shader.ixx  symbolic.ixx  tensor_var.cpp  tensor_var.h  tensor_var.ixx  variable.ixx
VulkanCompute/glsl/linalg/: copy.ixx  linalg.ixx  permute.ixx  solver.ixx  symm.ixx
VulkanCompute/glsl/linalg/shaders/: gmw81.glsl
VulkanCompute/glsl/lsq/: lsq.ixx
VulkanCompute/glsl/nlsq/: nlsq.ixx  nlsq_symbolic.ixx  symbolic.ixx
VulkanCompute/glsl/qmri/: qmri.ixx
VulkanCompute/linalg/: copy.ixx  glsl.ixx  linalg.ixx  linalg_glsl.ixx  solver.ixx  solver_glsl.ixx  symm.ixx
VulkanCompute/python/: ivim.py
cmake/: avk_toolkit.cmake  kompute.cmake  symengine.cmake
shaders/: sharpen.comp  texture1.frag
src/: CMakeLists.txt  VulkanCompute.cpp  pch.hpp  vc.ixx
src/app/: compute_app.ixx  compute_test_app.ixx  test_avk.ixx
src/compute/: vk_function.ixx  vk_variable.ixx
src/copy/shaders/: emboss.comp
src/expression/: expr.cpp  expr.ixx
src/expression/algebra/binary/: add.ixx  sub.ixx
src/expression/algebra/unary/: unary.ixx
src/expression/parser/: defaultexp.ixx  token.ixx
src/glsl/: func_factory.ixx  glsl.cpp  glsl.ixx  symbolic.ixx  tensor_var.cpp  tensor_var.ixx  variable.ixx
src/glsl/linalg/: copy.ixx  linalg.ixx  permute.ixx  symm.ixx
src/glsl/linalg/shaders/: copy_mat.glsl
src/glsl/nlsq/: nlsq.ixx  nlsq_symbolic.ixx
src/glsl/qmri/: qmri.ixx
src/python/: ivim.py
src/python/export/data/: ivim_bvals.vcdat  ivim_data.vcdat
